--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "toaster": "^0.1.2",
     "web-vitals": "^2.1.4"
   },
